# CG-labs

./: CMakeLists.txt  README.md
lab_1/: Game.cs  Program.cs  Shader.cs  lab_1.csproj
lab_2/: CMakeLists.txt  lab_2.cpp
lab_3/: CMakeLists.txt  lab_3.cpp
lab_4/: CMakeLists.txt  lab_4.cpp
lab_5/: CMakeLists.txt  lab_5.cpp
